<resources>
    <string name="app_name">DoDo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- task stuff -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="new_task">New Task</string>
    <string name="description">Description</string>
    <string name="add_task">Add Task</string>
    <string name="todo">TODO</string>
    <string name="settings">Settings</string>
    <string name="notes">Notes</string>
    <string name="todos">ToDos</string>
    <string name="title">Title:</string>
    <string name="color">Color</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>

    <!-- note stuff -->
    <string name="note_title_preview">Note title…</string>
    <string name="note_text_preview">Note text…</string>
    <string name="dialog_ok">OK</string>
    <string name="refresh">Refresh</string>

    <!-- settings -->
    <string name="server_sum_upload">Check if you want to use a server</string>
    <string name="server_addr">Server Address</string>
    <string name="server_hint">dodo-server.example</string>
    <string name="server_category">Server Connection</string>
    <string name="enable_server">Enable Server Upload</string>

    <string name="profile_category">Profile</string>
    <string name="profile_id">Profile-ID</string>
    <string name="profile_name">Profile-Name</string>
    <string name="profile_creation_date">Creation Date</string>

    <!-- profile dialog -->
    <string name="dial_prof_name_hint">Name…</string>
    <string name="dial_prof_pass">Password…</string>
    <string name="dial_prof_reppass">Repeat Password…</string>
    <string name="dial_prof_label_id">ID:</string>
    <string name="dial_prof_label_name">Name:</string>
    <string name="dial_prof_label_pass">Password:</string>
    <string name="dial_prof_label_reppass">Repeat Password:</string>
    <string name="dial_prof_info_text">
        Your todos and notes are stored by profiles. Therefore you must create a profile, no matter if you decide to use
        a self hosted server instance later on or not. Even if you only use it on your local device, you can create
        multiple profiles and switch between them to ensure a better organization and structure. To create such a
        profile, you have to choose a name and a password. You can also just leave the fields empty but be aware, the
        created profile cannot be uploaded to server before you entered credentials.
    </string>


</resources>