<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/server_category">
        <CheckBoxPreference android:defaultValue="false"
                            android:key="server_enabled_pref"
                            android:summary="@string/server_sum_upload"
                            android:title="@string/enable_server"/>
        <EditTextPreference android:title="@string/server_addr"
                            android:key="server_addr_pref"
                            android:defaultValue="dodo.example"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/profile_category">
        <EditTextPreference android:title="@string/profile_id"
                            android:key="profile_id_pref"
                            android:defaultValue="1"
                            android:enabled="false"/>
        <EditTextPreference android:title="@string/profile_name"
                            android:key="profile_name_pref"
                            android:defaultValue="DoDo"/>
        <Preference android:title="@string/profile_creation_date"
                    android:key="profile_creation_date_pref"
                    android:defaultValue="01.01.2000"
                    android:enabled="false"/>
    </PreferenceCategory>
</PreferenceScreen>