<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@+id/dialog_prof_info_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:text="@string/dial_prof_info_text"
              android:textStyle="bold"

              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/dialog_prof_label_id"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:text="@string/dial_prof_label_id"
              android:textStyle="bold"

              app:layout_constraintTop_toBottomOf="@id/dialog_prof_info_text"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/dialog_prof_id"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"

              app:layout_constraintTop_toBottomOf="@id/dialog_prof_label_id"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/dialog_prof_label_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:text="@string/dial_prof_label_name"
              android:textStyle="bold"

              app:layout_constraintTop_toBottomOf="@id/dialog_prof_id"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <EditText android:id="@+id/dialog_prof_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/dial_prof_name_hint"
              android:autofillHints=""
              android:inputType="textCapCharacters"
              android:maxLength="16"
              android:layout_margin="10dp"

              app:layout_constraintTop_toBottomOf="@id/dialog_prof_label_name"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/dialog_prof_label_pass"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:text="@string/dial_prof_label_pass"
              android:textStyle="bold"

              app:layout_constraintTop_toBottomOf="@id/dialog_prof_name"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <EditText android:id="@+id/dialog_prof_pass"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/dial_prof_pass"
              android:autofillHints=""
              android:inputType="textPassword"
              android:maxLength="32"
              android:layout_margin="10dp"

              app:layout_constraintTop_toBottomOf="@id/dialog_prof_label_pass"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <TextView android:id="@+id/dialog_prof_label_rep_pass"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_margin="10dp"
              android:text="@string/dial_prof_label_reppass"
              android:textStyle="bold"

              app:layout_constraintTop_toBottomOf="@id/dialog_prof_pass"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>

    <EditText android:id="@+id/dialog_prof_rep_pass"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/dial_prof_reppass"
              android:autofillHints=""
              android:inputType="textPassword"
              android:maxLength="32"
              android:layout_margin="10dp"

              app:layout_constraintTop_toBottomOf="@id/dialog_prof_label_rep_pass"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintEnd_toEndOf="parent"/>


    <Button android:id="@+id/dialog_prof_leave_button"
            android:layout_width="72dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"
            android:text="@string/back"
            android:background="@drawable/round_corners_left"
            android:shadowColor="@color/grey"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"


            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_prof_rep_pass"/>

    <Button android:id="@+id/dialog_prof_submit_button"
            android:layout_width="72dp"
            android:layout_height="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:layout_marginRight="64dp"
            android:text="@string/submit"
            android:background="@drawable/round_corners_left"
            android:shadowColor="@color/grey"
            android:shadowDx="10"
            android:shadowDy="10"
            android:shadowRadius="10"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_prof_rep_pass"/>

</androidx.constraintlayout.widget.ConstraintLayout>