<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.EditDataFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".SetDataActivity">

        <TextView android:id="@+id/entry_title_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/title"
                  android:textSize="20sp"
                  android:layout_marginTop="8dp"
                  android:layout_marginStart="24dp"
                  android:layout_marginEnd="24dp"
                  android:layout_marginLeft="24dp"
                  android:layout_marginRight="24dp"

                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:id="@+id/entry_task_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/description"
                android:maxLength="64"
                android:inputType="textEmailAddress"
                android:autofillHints=""

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/entry_title_text"/>

        <TextView android:id="@+id/entry_color_text"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/color"
                  android:textSize="20sp"
                  android:layout_marginTop="10dp"
                  android:layout_marginStart="24dp"
                  android:layout_marginEnd="24dp"
                  android:layout_marginLeft="24dp"
                  android:layout_marginRight="24dp"

                  app:layout_constraintLeft_toLeftOf="parent"
                  app:layout_constraintTop_toBottomOf="@id/entry_task_text"/>

        <SeekBar android:id="@+id/red_seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:progressDrawable="@drawable/red_seekbar_style"
                 android:max="255"
                 android:maxHeight="3dip"
                 android:minHeight="3dip"

                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/entry_color_text"/>

        <SeekBar android:id="@+id/green_seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:progressDrawable="@drawable/green_seekbar_style"
                 android:max="255"
                 android:maxHeight="3dip"
                 android:minHeight="3dip"

                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/red_seekbar"/>

        <SeekBar android:id="@+id/blue_seekbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:progressDrawable="@drawable/blue_seekbar_style"
                 android:max="255"
                 android:maxHeight="3dip"
                 android:minHeight="3dip"

                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/green_seekbar"/>

        <Button android:id="@+id/color_preview_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFF0F0FA"
                android:layout_margin="10dp"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/blue_seekbar" />

        <EditText
                android:id="@+id/entry_hex_color_string"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:autofillHints=""
                android:text=""
                android:maxLength="7"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/color_preview_button"
                tools:ignore="LabelFor"/>

        <Button android:id="@+id/entry_leave_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="72dp"
                android:layout_marginStart="72dp"
                android:text="@string/back"
                android:background="@drawable/round_corners_left"
                android:shadowColor="@color/grey"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"


                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/entry_hex_color_string"/>

        <Button android:id="@+id/entry_submit_button"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="72dp"
                android:layout_marginRight="72dp"
                android:text="@string/submit"
                android:background="@drawable/round_corners_left"
                android:shadowColor="@color/grey"
                android:shadowDx="10"
                android:shadowDy="10"
                android:shadowRadius="10"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/entry_hex_color_string"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>